dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp-deployment
spec:
  selector:
    matchLabels:
      app: testapp
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata: 
      labels:
        app: testapp
        app.kubernetes.io/name: testapp
    spec:
      containers:
      - name: testapp
        image: sysose/testapp:1.20
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "100Mi"
            cpu: "100m"
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
        readynessProbe:
          httpGet:
            path: /
            port: 5000
            initialDelaySeconds: 3
