dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: testapp-service
spec:
  selector:
    app.kubernetes.io/name: testapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
