dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: test-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testapp
                port:
                  number: 8080
